--- a/Delegation/index.html
+++ b/Delegation/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event Delegation</title>
-    <link rel="stylesheet" href="/bootcamp_web_dev/Delegation/style.css" />
+    <link rel="stylesheet" href="/Delegation/style.css" />
   </head>
 
   <body>
     <img
       src="https://cdn-icons-png.flaticon.com/512/733/733579.png"
       alt=""
-      height="100px"
+      height="80px"
     />
 
     <form action="/dogs" id="tweetForm">
@@ -22,9 +22,6 @@
 
     <h2>Tweets:</h2>
     <ul id="tweets">
-      <li>I AM LI!!!</li>
-      <li>I AM LI!!!</li>
-      <p>aslkdjaslkdjaksl</p>
     </ul>
 
     <script src="app.js"></script>
