--- a/RandomColors/index.html
+++ b/RandomColors/index.html
@@ -5,6 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Colors</title>
+    <style>
+        body {
+
+  color: rgb(0, 0, 0);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 1.6rem;
+  text-align: center;
+  font-weight: 600;
+  font-family: consolas;
+}
+        button{
+    margin: 2rem;
+    background: rgb(2,0,36);
+    color: white;
+    border: none;
+    padding: 1.5rem 5.3rem;
+    font-size: 1.5rem;
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 5px;
+    cursor: pointer;
+    
+}
+    </style>
 </head>
 
 <body>
