--- a/ScoreKeeper/index.html
+++ b/ScoreKeeper/index.html
@@ -16,7 +16,7 @@
                     <div class="card">
                         <div class="card-image">
                             <figure class="image is-2by1">
-                                <img src="https://images.unsplash.com/photo-1534158914592-062992fbe900?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3784&q=80"
+                                <img src="https://images.unsplash.com/photo-1611762348135-5b09d2f0390d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
                                     alt="">
                             </figure>
                         </div>
@@ -45,13 +45,15 @@
                                         <option value="10">10</option>
                                         <option value="11">11</option>
                                     </select>
+                                    
                                 </div>
                             </div>
+                            
                         </div>
                         <footer class="card-footer">
-                            <button id="p1Button" class="is-primary button card-footer-item is-large">+1 Player
+                            <button id="p1Button" class="is-primary button card-footer-item is-large">+1 to Player
                                 One</button>
-                            <button id="p2Button" class="is-info button card-footer-item is-large">+1 Player
+                            <button id="p2Button" class="is-info button card-footer-item is-large">+1 to Player
                                 Two</button>
                             <button id="reset" class="is-danger button card-footer-item is-large">Reset</button>
 
