--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon</title>
     <link rel="stylesheet" href="app.css">
+     <link
+      rel="shortcut icon"
+      href="https://cdn-icons-png.flaticon.com/512/361/361998.png"
+      type="image/x-icon"
+    />
 </head>
 
 <body>
